--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -16,25 +16,28 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Azure login (OIDC)
+      - name: Azure login
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+      - name: Show current account
+        run: |
+          az account show
+          az account list --output table
+          az account set --subscription ${{ fromJSON(secrets.AZURE_CREDENTIALS).subscriptionId }}
+
       - name: Prepare naming/env
         id: prep
         run: |
-          # region & admin user (defaults if not provided)
           echo "TF_LOCATION=${{ secrets.TF_LOCATION || 'westeurope' }}" >> $GITHUB_ENV
           echo "VM_ADMIN_USERNAME=${{ secrets.VM_ADMIN_USERNAME || 'azureuser' }}" >> $GITHUB_ENV
 
-          # safe-ish name seeds
           REPO_SAFE=$(echo '${{ github.repository }}' | tr '[:upper:]/' '[:lower:]-' | tr -cd 'a-z0-9-')
           RUN_KEY=${{ github.run_id }}
 
-          # backend names (<=24 chars for SA; make it unique but short)
           RG_NAME="tfstate-${REPO_SAFE}-${RUN_KEY}"
-          SA_NAME="tf${RUN_KEY}${RANDOM}"    # storage acct: lowercase, <=24; random to avoid collisions
+          SA_NAME="tf${RUN_KEY}${RANDOM}"
           SA_NAME=$(echo "$SA_NAME" | tr -cd 'a-z0-9' | cut -c1-24)
 
           echo "BACKEND_RG=$RG_NAME" >> $GITHUB_ENV
@@ -60,8 +63,7 @@ jobs:
             -var "backend_resource_group=${BACKEND_RG}" \
             -var "backend_storage_account=${BACKEND_SA}" \
             -var "backend_container=${BACKEND_CN}" \
-            -var "backend_key=${BACKEND_KEY}" \
-            -var "sp_client_id=${{ fromJSON(secrets.AZURE_CREDENTIALS).clientId }}"
+            -var "backend_key=${BACKEND_KEY}"
 
       - name: Read backend outputs
         id: bkend
@@ -71,6 +73,9 @@ jobs:
           echo "SA=$(terraform output -raw backend_storage_account)" >> $GITHUB_OUTPUT
           echo "CN=$(terraform output -raw backend_container)" >> $GITHUB_OUTPUT
           echo "KEY=$(terraform output -raw backend_key)" >> $GITHUB_OUTPUT
+          SA_KEY=$(terraform output -raw storage_account_access_key)
+          echo "::add-mask::$SA_KEY"
+          echo "SAKEY=$SA_KEY" >> $GITHUB_OUTPUT
 
       # ------ MAIN INFRA USING REMOTE STATE ------
       - name: Terraform init (main with backend)
@@ -80,7 +85,8 @@ jobs:
             -backend-config="resource_group_name=${{ steps.bkend.outputs.RG }}" \
             -backend-config="storage_account_name=${{ steps.bkend.outputs.SA }}" \
             -backend-config="container_name=${{ steps.bkend.outputs.CN }}" \
-            -backend-config="key=${{ steps.bkend.outputs.KEY }}"
+            -backend-config="key=${{ steps.bkend.outputs.KEY }}" \
+            -backend-config="access_key=${{ steps.bkend.outputs.SAKEY }}"
 
       - name: Terraform plan
         working-directory: terraform
