--- a/.github/workflows/ansible-deploy.yml
+++ b/.github/workflows/ansible-deploy.yml
@@ -13,7 +13,6 @@ env:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
 
@@ -22,33 +21,34 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+      - name: Set subscription (optional but nice)
+        run: az account set --subscription ${{ fromJSON(secrets.AZURE_CREDENTIALS).subscriptionId }}
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.7.5
 
-      # read backend cfg from bootstrap state
-      - name: Terraform init (bootstrap)
-        working-directory: terraform/backend-bootstrap
-        run: terraform init
-
-      - name: Read backend outputs
-        id: bkend
-        working-directory: terraform/backend-bootstrap
+      # ---- Fetch backend access key (no bootstrap state needed) ----
+      - name: Get storage account key for backend
+        id: sa
         run: |
-          echo "RG=$(terraform output -raw backend_resource_group)" >> $GITHUB_OUTPUT
-          echo "SA=$(terraform output -raw backend_storage_account)" >> $GITHUB_OUTPUT
-          echo "CN=$(terraform output -raw backend_container)" >> $GITHUB_OUTPUT
-          echo "KEY=$(terraform output -raw backend_key)" >> $GITHUB_OUTPUT
+          SA_KEY=$(az storage account keys list \
+            -g "${{ vars.BACKEND_RG }}" \
+            -n "${{ vars.BACKEND_SA }}" \
+            --query "[0].value" -o tsv)
+          echo "::add-mask::$SA_KEY"
+          echo "SAKEY=$SA_KEY" >> $GITHUB_OUTPUT
 
-      - name: Terraform init (main with backend)
+      - name: Terraform init (main with remote backend)
         working-directory: terraform
         run: |
           terraform init \
-            -backend-config="resource_group_name=${{ steps.bkend.outputs.RG }}" \
-            -backend-config="storage_account_name=${{ steps.bkend.outputs.SA }}" \
-            -backend-config="container_name=${{ steps.bkend.outputs.CN }}" \
-            -backend-config="key=${{ steps.bkend.outputs.KEY }}"
+            -backend-config="resource_group_name=${{ vars.BACKEND_RG }}" \
+            -backend-config="storage_account_name=${{ vars.BACKEND_SA }}" \
+            -backend-config="container_name=${{ vars.BACKEND_CN }}" \
+            -backend-config="key=${{ vars.BACKEND_KEY }}" \
+            -backend-config="access_key=${{ steps.sa.outputs.SAKEY }}"
 
       - name: Get outputs (public_ip, admin_username)
         id: tfout
@@ -79,6 +79,8 @@ jobs:
       - name: Run playbook
         working-directory: ansible
         env:
+          # turn off strict host key checking for first connection
+          ANSIBLE_HOST_KEY_CHECKING: "False"
           KC_ADMIN_USER: ${{ secrets.KC_ADMIN_USER || 'admin' }}
           KC_ADMIN_PASS: ${{ secrets.KC_ADMIN_PASS || 'adminpassword' }}
         run: |
