--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -22,49 +22,46 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Azure login
+      - name: Azure login (OIDC)
         uses: azure/login@v2
         with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          client-id:       ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id:       ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
           terraform_version: 1.7.5
 
-      # Recreate same bootstrap variables (naming must match apply run)
-      # We’ll get them from outputs (no need to recompute)
-      - name: Terraform init (bootstrap)
-        working-directory: terraform/backend-bootstrap
-        run: terraform init
-
-      - name: Ensure bootstrap state is refreshed
-        working-directory: terraform/backend-bootstrap
-        run: terraform apply -refresh-only -auto-approve
-
-      - name: Read backend outputs
-        id: bkend
-        working-directory: terraform/backend-bootstrap
-        run: |
-          echo "RG=$(terraform output -raw backend_resource_group)" >> $GITHUB_OUTPUT
-          echo "SA=$(terraform output -raw backend_storage_account)" >> $GITHUB_OUTPUT
-          echo "CN=$(terraform output -raw backend_container)" >> $GITHUB_OUTPUT
-          echo "KEY=$(terraform output -raw backend_key)" >> $GITHUB_OUTPUT
-
+      # ----- MAIN (with remote backend) -----
       - name: Terraform init (main with backend)
         working-directory: terraform
         run: |
           terraform init \
-            -backend-config="resource_group_name=${{ steps.bkend.outputs.RG }}" \
-            -backend-config="storage_account_name=${{ steps.bkend.outputs.SA }}" \
-            -backend-config="container_name=${{ steps.bkend.outputs.CN }}" \
-            -backend-config="key=${{ steps.bkend.outputs.KEY }}"
+            -backend-config="resource_group_name=${{ vars.BACKEND_RG }}" \
+            -backend-config="storage_account_name=${{ vars.BACKEND_SA }}" \
+            -backend-config="container_name=${{ vars.BACKEND_CN }}" \
+            -backend-config="key=${{ vars.BACKEND_KEY }}"
 
       - name: Terraform destroy (main)
         working-directory: terraform
         run: terraform destroy -auto-approve
 
-      - name: Optionally destroy backend
+      # ----- OPTIONAL: destroy backend bootstrap -----
+      - name: Terraform init (bootstrap)
         if: ${{ inputs.destroy_backend == 'true' }}
         working-directory: terraform/backend-bootstrap
-        run: terraform destroy -auto-approve || true
+        run: terraform init
+
+      - name: Terraform destroy (bootstrap)
+        if: ${{ inputs.destroy_backend == 'true' }}
+        working-directory: terraform/backend-bootstrap
+        run: |
+          terraform destroy -auto-approve \
+            -var "location=${{ vars.TF_LOCATION || 'westeurope' }}" \
+            -var "backend_resource_group=${{ vars.BACKEND_RG }}" \
+            -var "backend_storage_account=${{ vars.BACKEND_SA }}" \
+            -var "backend_container=${{ vars.BACKEND_CN }}" \
+            -var "backend_key=${{ vars.BACKEND_KEY }}" \
+            -var "sp_client_id=${{ secrets.AZURE_CLIENT_ID }}"
