--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -22,12 +22,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Azure login (OIDC)
+      - name: Azure login (client secret)
         uses: azure/login@v2
         with:
           client-id:       ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id:       ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
@@ -57,6 +58,7 @@ jobs:
       - name: Terraform destroy (bootstrap)
         if: ${{ inputs.destroy_backend == 'true' }}
         working-directory: terraform/backend-bootstrap
+
         run: |
           terraform destroy -auto-approve \
             -var "location=${{ vars.TF_LOCATION || 'westeurope' }}" \
