--- a/.github/workflows/ansible-deploy.yml
+++ b/.github/workflows/ansible-deploy.yml
@@ -8,11 +8,17 @@ permissions:
 
 env:
   TF_IN_AUTOMATION: "true"
-  ARM_USE_OIDC: "true"
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      # Tell the azurerm provider to use client secret auth (from your JSON secret)
+      ARM_CLIENT_ID:       ${{ fromJSON(secrets.AZURE_CREDENTIALS).clientId }}
+      ARM_CLIENT_SECRET:   ${{ fromJSON(secrets.AZURE_CREDENTIALS).clientSecret }}
+      ARM_TENANT_ID:       ${{ fromJSON(secrets.AZURE_CREDENTIALS).tenantId }}
+      ARM_SUBSCRIPTION_ID: ${{ fromJSON(secrets.AZURE_CREDENTIALS).subscriptionId }}
+
     steps:
       - uses: actions/checkout@v4
 
@@ -20,7 +26,6 @@ jobs:
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
@@ -47,6 +52,8 @@ jobs:
         run: |
           umask 077
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          # avoid interactive host key prompt
+          ssh-keyscan -H "${{ steps.tfout.outputs.PUBLIC_IP }}" >> ~/.ssh/known_hosts
 
       - name: Install Ansible
         run: |
