--- a/.github/workflows/ansible-deploy.yml
+++ b/.github/workflows/ansible-deploy.yml
@@ -13,7 +13,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      # Tell the azurerm provider to use client secret auth (from your JSON secret)
+      # Tell azurerm provider to use client-secret auth (from your JSON secret)
       ARM_CLIENT_ID:       ${{ fromJSON(secrets.AZURE_CREDENTIALS).clientId }}
       ARM_CLIENT_SECRET:   ${{ fromJSON(secrets.AZURE_CREDENTIALS).clientSecret }}
       ARM_TENANT_ID:       ${{ fromJSON(secrets.AZURE_CREDENTIALS).tenantId }}
@@ -32,14 +32,36 @@ jobs:
         with:
           terraform_version: 1.7.5
 
+      # ---- read backend location from bootstrap state (no hardcoded vars) ----
+      - name: Terraform init (bootstrap)
+        working-directory: terraform/backend-bootstrap
+        run: terraform init
+
+      - name: Read backend outputs
+        id: bkend
+        working-directory: terraform/backend-bootstrap
+        run: |
+          echo "RG=$(terraform output -raw backend_resource_group)" >> $GITHUB_OUTPUT
+          echo "SA=$(terraform output -raw backend_storage_account)" >> $GITHUB_OUTPUT
+          echo "CN=$(terraform output -raw backend_container)" >> $GITHUB_OUTPUT
+          echo "KEY=$(terraform output -raw backend_key)" >> $GITHUB_OUTPUT
+
+      - name: Echo backend (debug)
+        run: |
+          echo "RG=${{ steps.bkend.outputs.RG }}"
+          echo "SA=${{ steps.bkend.outputs.SA }}"
+          echo "CN=${{ steps.bkend.outputs.CN }}"
+          echo "KEY=${{ steps.bkend.outputs.KEY }}"
+
+      # ---- init main with the real backend ----
       - name: Terraform init (main with backend)
         working-directory: terraform
         run: |
           terraform init \
-            -backend-config="resource_group_name=${{ vars.BACKEND_RG }}" \
-            -backend-config="storage_account_name=${{ vars.BACKEND_SA }}" \
-            -backend-config="container_name=${{ vars.BACKEND_CN }}" \
-            -backend-config="key=${{ vars.BACKEND_KEY }}"
+            -backend-config="resource_group_name=${{ steps.bkend.outputs.RG }}" \
+            -backend-config="storage_account_name=${{ steps.bkend.outputs.SA }}" \
+            -backend-config="container_name=${{ steps.bkend.outputs.CN }}" \
+            -backend-config="key=${{ steps.bkend.outputs.KEY }}"
 
       - name: Get outputs (public_ip, admin_username)
         id: tfout
@@ -52,7 +74,6 @@ jobs:
         run: |
           umask 077
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          # avoid interactive host key prompt
           ssh-keyscan -H "${{ steps.tfout.outputs.PUBLIC_IP }}" >> ~/.ssh/known_hosts
 
       - name: Install Ansible
