--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -13,6 +13,7 @@ jobs:
   destroy:
     runs-on: ubuntu-latest
     env:
+      # azurerm provider creds via JSON secret
       ARM_CLIENT_ID:       ${{ fromJSON(secrets.AZURE_CREDENTIALS).clientId }}
       ARM_CLIENT_SECRET:   ${{ fromJSON(secrets.AZURE_CREDENTIALS).clientSecret }}
       ARM_TENANT_ID:       ${{ fromJSON(secrets.AZURE_CREDENTIALS).tenantId }}
@@ -25,7 +26,6 @@ jobs:
         uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
@@ -44,7 +44,11 @@ jobs:
 
       - name: Terraform destroy (main)
         working-directory: terraform
-        run: terraform destroy -auto-approve -input=false -no-color -lock-timeout=5m
+        run: |
+          terraform destroy -auto-approve -input=false -no-color -lock-timeout=5m \
+            -var "location=${{ vars.TF_LOCATION || 'westeurope' }}" \
+            -var "vm_admin_username=${{ vars.VM_ADMIN_USERNAME || 'azureuser' }}" \
+            -var "ssh_public_key_data=${{ secrets.SSH_PUBLIC_KEY }}"
 
       # ---------- BOOTSTRAP (destroy backend resources) ----------
       - name: Terraform init (bootstrap)
@@ -53,7 +57,6 @@ jobs:
 
       - name: Terraform destroy (bootstrap)
         working-directory: terraform/backend-bootstrap
-
         run: |
           terraform destroy -auto-approve -input=false -no-color -lock-timeout=5m \
             -var "location=${{ vars.TF_LOCATION || 'westeurope' }}" \
