--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -13,6 +13,7 @@ jobs:
   destroy:
     runs-on: ubuntu-latest
     env:
+      # azurerm provider creds (from your JSON secret)
       ARM_CLIENT_ID:       ${{ fromJSON(secrets.AZURE_CREDENTIALS).clientId }}
       ARM_CLIENT_SECRET:   ${{ fromJSON(secrets.AZURE_CREDENTIALS).clientSecret }}
       ARM_TENANT_ID:       ${{ fromJSON(secrets.AZURE_CREDENTIALS).tenantId }}
@@ -31,7 +32,7 @@ jobs:
         with:
           terraform_version: 1.7.5
 
-      # -------- MAIN (destroy VM etc. using the remote backend) --------
+      # 1) Destroy MAIN infra (VM, NIC, NSG, etc.) that uses the remote backend
       - name: Terraform init (main with backend)
         working-directory: terraform
         run: |
@@ -41,7 +42,6 @@ jobs:
             -backend-config="container_name=${{ vars.BACKEND_CN }}" \
             -backend-config="key=${{ vars.BACKEND_KEY }}"
 
-      # main destroy still requires vars declared by the root module
       - name: Terraform destroy (main)
         working-directory: terraform
         run: |
@@ -50,61 +50,15 @@ jobs:
             -var "vm_admin_username=${{ vars.VM_ADMIN_USERNAME || 'azureuser' }}" \
             -var "ssh_public_key_data=${{ secrets.SSH_PUBLIC_KEY }}"
 
-      # -------- BACKEND CLEANUP (import-if-exists -> empty container -> destroy) --------
-      - name: Terraform init (bootstrap)
+      # 2) Try to destroy the BACKEND with Terraform (best-effort)
+      - name: Terraform init (backend bootstrap)
         working-directory: terraform/backend-bootstrap
+        continue-on-error: true
         run: terraform init -input=false -no-color
 
-      # import existing backend resources into bootstrap state if they exist
-      - name: Import backend if exists
+      - name: Terraform destroy (backend bootstrap)
         working-directory: terraform/backend-bootstrap
-        shell: bash
-        run: |
-          set -euo pipefail
-          SUBID="${ARM_SUBSCRIPTION_ID}"
-          RG="${{ vars.BACKEND_RG }}"
-          SA="${{ vars.BACKEND_SA }}"
-          CN="${{ vars.BACKEND_CN }}"
-
-          # RG
-          if az group exists -n "$RG" | grep -qi true; then
-            terraform state show azurerm_resource_group.tfstate >/dev/null 2>&1 || \
-              terraform import azurerm_resource_group.tfstate "/subscriptions/${SUBID}/resourceGroups/${RG}"
-          else
-            echo "RG not found; skipping import."
-          fi
-
-          # SA
-          SA_ID="$(az storage account show -g "$RG" -n "$SA" --query id -o tsv 2>/dev/null || true)"
-          if [[ -n "$SA_ID" ]]; then
-            terraform state show azurerm_storage_account.tfstate >/dev/null 2>&1 || \
-              terraform import azurerm_storage_account.tfstate "$SA_ID"
-          else
-            echo "Storage Account not found; skipping import."
-          fi
-
-          # Container (import by URL form; ignore failure if missing)
-          CN_URL="https://${SA}.blob.core.windows.net/${CN}"
-          terraform state show azurerm_storage_container.tfstate >/dev/null 2>&1 || \
-            terraform import azurerm_storage_container.tfstate "$CN_URL" || true
-
-      # empty the container so SA delete won’t fail due to leftover blobs
-      - name: Empty state container (best effort)
-        shell: bash
-        run: |
-          set -euo pipefail
-          RG="${{ vars.BACKEND_RG }}"
-          SA="${{ vars.BACKEND_SA }}"
-          CN="${{ vars.BACKEND_CN }}"
-          if az storage account show -g "$RG" -n "$SA" >/dev/null 2>&1; then
-            echo "Deleting blobs in $CN @ $SA ..."
-            az storage blob delete-batch --account-name "$SA" -s "$CN" --auth-mode login --no-progress || true
-          else
-            echo "Storage Account not found; skipping delete-batch."
-          fi
-
-      - name: Terraform destroy (bootstrap)
-        working-directory: terraform/backend-bootstrap
+        continue-on-error: true
         run: |
           terraform destroy -auto-approve -input=false -no-color -lock-timeout=5m \
             -var "location=${{ vars.TF_LOCATION || 'westeurope' }}" \
@@ -112,3 +66,17 @@ jobs:
             -var "backend_storage_account=${{ vars.BACKEND_SA }}" \
             -var "backend_container=${{ vars.BACKEND_CN }}" \
             -var "backend_key=${{ vars.BACKEND_KEY }}"
+
+      # 3) Safety net: force-delete the backend RG (handles locks/leftovers)
+      - name: Force delete backend resource group (final safeguard)
+        run: |
+          set -euo pipefail
+          RG="${{ vars.BACKEND_RG }}"
+          if az group show -n "$RG" >/dev/null 2>&1; then
+            echo "Deleting backend RG: $RG"
+            az group delete -n "$RG" --yes
+            az group wait   -n "$RG" --deleted
+            echo "Backend RG $RG deleted."
+          else
+            echo "Backend RG $RG not found; nothing to delete."
+          fi
